--- a/NoteMicroservice.Identity/appsettings.json
+++ b/NoteMicroservice.Identity/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=NoteIndentity;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost,1433;Database=identity;User ID=sa;Password=Password123;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "This is private key anhndt27@gmail.com",
