--- a/NoteMicroservice.Note.Infrastructure/NoteMicroservice.Note.Infrastructure.csproj
+++ b/NoteMicroservice.Note.Infrastructure/NoteMicroservice.Note.Infrastructure.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.6" />
   </ItemGroup>
