--- a/NoteMicroservice.ServiceDefaults/NoteMicroservice.ServiceDefaults.csproj
+++ b/NoteMicroservice.ServiceDefaults/NoteMicroservice.ServiceDefaults.csproj
@@ -19,7 +19,7 @@
     <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.8.0" />
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" />
     <!-- <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" /> -->
   </ItemGroup>
