--- a/NoteMicroservice.MinimalApi/appsettings.json
+++ b/NoteMicroservice.MinimalApi/appsettings.json
@@ -1,7 +1,8 @@
 {
   "Jwt": {
-    "Key": "This is private key anhndt27@gmail.com",
-    "Issuer": "YourIssuer"
+    "Key": "DayLaMotChuoiKhoaBiMatRatDaiVaBaoMatChoJWTVaNodaiHon32Byte",
+    "Issuer": "your-issuer",
+    "Audience": "your-audience"
   },
   "Logging": {
     "LogLevel": {
