--- a/NoteMicroservice.Identity/appsettings.json
+++ b/NoteMicroservice.Identity/appsettings.json
@@ -1,10 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=identity;User ID=sa;Password=Password123;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.\\SQLEXPRESS01;Database=identity;Trusted_Connection=True;Encrypt=False;"
   },
   "Jwt": {
-    "Key": "This is private key anhndt27@gmail.com",
-    "Issuer": "YourIssuer"
+    "Key": "DayLaMotChuoiKhoaBiMatRatDaiVaBaoMatChoJWTVaNodaiHon32Byte",
+    "Issuer": "your-issuer",
+    "Audience": "your-audience"
   },
   "Logging": {
     "LogLevel": {
