--- a/NoteMicroservice.Note.API/appsettings.json
+++ b/NoteMicroservice.Note.API/appsettings.json
@@ -1,10 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=NoteDataBase;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.\\SQLEXPRESS01;Database=database;Trusted_Connection=True;Encrypt=False;"
   },
   "Jwt": {
-    "Key": "This is private key anhndt27@gmail.com",
-    "Issuer": "YourIssuer"
+    "Key": "DayLaMotChuoiKhoaBiMatRatDaiVaBaoMatChoJWTVaNodaiHon32Byte",
+    "Issuer": "your-issuer",
+    "Audience": "your-audience"
   },
   "Logging": {
     "LogLevel": {
