--- a/NoteMicroservice.Note.EFCore/NoteMicroservice.Note.EFCore.csproj
+++ b/NoteMicroservice.Note.EFCore/NoteMicroservice.Note.EFCore.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NoteMicroservice.Note.Infrastructure\NoteMicroservice.Note.Infrastructure.csproj" />
+    <ProjectReference Include="..\NoteMicroservice.Note.Domain\NoteMicroservice.Note.Domain.csproj" />
   </ItemGroup>
 
 </Project>
