--- a/NoteMicroservice.Note.EFCore/appsettings.json
+++ b/NoteMicroservice.Note.EFCore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=NoteDataBase;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.\\SQLEXPRESS01;Database=database;Trusted_Connection=True;Encrypt=False;"
   },
   "Logging": {
     "LogLevel": {
